--- a/config_ArgExt.json
+++ b/config_ArgExt.json
@@ -1,6 +1,6 @@
 {
     "mode": "train",
-    "task": "TriCls",
+    "task": "ArgExt",
     "dataset": "ace05-en",
     "model_type": "MQAEE",
     "gpu_device": 0,
@@ -10,19 +10,19 @@
     "train_file": "../autodl-fs/ace05-en/split6/train.json",
     "dev_file": "../autodl-fs/ace05-en/split6/dev.json",
     "test_file": "../autodl-fs/ace05-en/split6/test.json",
-    "checkpoint": "",
+    "checkpoint": "./outputs/MQAEE_ArgExt_ace05_bert-large-cased/20240427_000737601",
 
     "pretrained_model_name": "bert-large-cased",
     "pretrained_model_path": "../autodl-fs/bert-large-cased",
     "max_length": 200,
-    "max_question_length": 64,
-    "max_sample_neg": 10,
+    "use_history": true,
+    "multi_piece_strategy": "average",
 
     "base_model_dropout": 0.2,
-    "max_epoch": 3,
-    "warmup_epoch": 0,
+    "max_epoch": 20,
+    "warmup_epoch": 1,
     "accumulate_step": 1,
-    "train_batch_size": 2,
+    "train_batch_size": 4,
     "eval_batch_size": 1,
     "learning_rate": 1e-05,
     "base_model_learning_rate": 1e-05,
