--- a/config_TriId.json
+++ b/config_TriId.json
@@ -1,4 +1,5 @@
 {
+    "mode": "train",
     "task": "TriId",
     "dataset": "ace05-en",
     "model_type": "MQAEE",
@@ -6,9 +7,10 @@
     "seed": 0,
     "cache_dir": "./cache",
     "output_dir": "./outputs/MQAEE_TriId_ace05_bert-large-cased",
-    "train_file": "../autodl-fs/ace05-en/split1/train.json",
-    "dev_file": "../autodl-fs/ace05-en/split1/dev.json",
-    "test_file": "../autodl-fs/ace05-en/split1/test.json",
+    "train_file": "../autodl-fs/ace05-en/split6/train.json",
+    "dev_file": "../autodl-fs/ace05-en/split6/dev.json",
+    "test_file": "../autodl-fs/ace05-en/split6/test.json",
+    "checkpoint": "",
 
     "pretrained_model_name": "bert-large-cased",
     "pretrained_model_path": "../autodl-fs/bert-large-cased",
@@ -17,7 +19,7 @@
 
     "span_base_model_dropout": 0.2,
     "span_max_epoch": 20,
-    "span_warmup_epoch": 5,
+    "span_warmup_epoch": 2,
     "span_accumulate_step": 1,
     "span_train_batch_size": 8,
     "span_eval_batch_size": 12,
