--- a/config_ArgExt.json
+++ b/config_ArgExt.json
@@ -7,19 +7,19 @@
     "seed": 0,
     "cache_dir": "./cache",
     "output_dir": "./outputs/MQAEE_ArgExt_ace05_bert-large-cased",
-    "train_file": "../autodl-fs/ace05-en/split6/train.json",
-    "dev_file": "../autodl-fs/ace05-en/split6/dev.json",
-    "test_file": "../autodl-fs/ace05-en/split6/test.json",
-    "checkpoint": "./outputs/MQAEE_ArgExt_ace05_bert-large-cased/20240427_000737601",
+    "train_file": "./data/train.json",
+    "dev_file": "./data/dev.json",
+    "test_file": "./data/test.json",
+    "checkpoint": " ",
 
     "pretrained_model_name": "bert-large-cased",
-    "pretrained_model_path": "../autodl-fs/bert-large-cased",
+    "pretrained_model_path": "bert-large-cased",
     "max_length": 200,
     "use_history": true,
     "multi_piece_strategy": "average",
 
     "base_model_dropout": 0.2,
-    "max_epoch": 20,
+    "max_epoch": 10,
     "warmup_epoch": 1,
     "accumulate_step": 1,
     "train_batch_size": 4,
