--- a/config_TriCls.json
+++ b/config_TriCls.json
@@ -6,17 +6,17 @@
     "gpu_device": 0,
     "seed": 0,
     "cache_dir": "./cache",
-    "output_dir": "./outputs/MQAEE_ArgExt_ace05_bert-large-cased",
-    "train_file": "../autodl-fs/ace05-en/split6/train.json",
-    "dev_file": "../autodl-fs/ace05-en/split6/dev.json",
-    "test_file": "../autodl-fs/ace05-en/split6/test.json",
-    "checkpoint": "",
+    "output_dir": "./outputs/MQAEE_TriCls_ace05_bert-large-cased",
+    "train_file": "./data/train.json",
+    "dev_file": "./data/dev.json",
+    "test_file": "./data/test.json",
+    "checkpoint": " ",
 
     "pretrained_model_name": "bert-large-cased",
-    "pretrained_model_path": "../autodl-fs/bert-large-cased",
+    "pretrained_model_path": "bert-large-cased",
     "max_length": 200,
     "max_question_length": 64,
-    "max_sample_neg": 10,
+    "max_sample_neg": 2,
 
     "base_model_dropout": 0.2,
     "max_epoch": 3,
